# lora-map

./: .gitignore  CLAUDE.md  Containerfile  README.md  TODO.SHIP.md  TODOS.SHIP.md  TODOS.md  compose.yml  docker-compose.yml  eslint.config.js  index.html  package.json  parameters.md  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
app/: auth.py  colors.py  main.py  matrix.py
app/db/: __init__.py  connection.py  models.py  schema.py
app/models/: CoveragePredictionRequest.py  DeadzoneResponse.py  MatrixConfigRequest.py  PointToPointResult.py  TowerPathsRequest.py  responses.py
app/services/: aggregate.py  deadzone.py  (+2 more)
docs/: TODOS.md
e2e/: api-integration.spec.ts  auth.spec.ts  fixtures.ts  visitor.spec.ts
src/: App.vue  deadzoneLayer.ts  layers.ts  store.ts  style.css  types.ts  utils.ts
tests/: conftest.py  test_aggregate.py  test_aggregate_api.py  test_api.py  test_api_edge_cases.py  test_auth.py  test_auth_rate_limit.py  test_background_tasks.py  test_batch_simulation.py  test_colors.py  test_db_connection.py  test_db_connection_env.py  test_db_context_manager.py  test_db_schema.py  test_db_schema_constraints.py  test_deadzone_api.py  test_deadzone_service.py  test_helpers.py  test_matrix.py  test_matrix_api.py  test_models.py  test_models_validation.py  test_p2p_parser.py  test_presets_json.py  test_response_models.py  test_simulations_filter.py  test_splat_static.py  test_swr.py  test_terrain.py  test_tower_paths_api.py  test_window_mode.py  test_worst_case.py
(+41 files in other folders)
