[project]
name = "lora-planner"
version = "0.1.0"
description = "LoRa radio coverage prediction tool using SPLAT! / ITM"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "diskcache>=5.6",
    "fastapi>=0.115",
    "haversine>=2.8",
    "matplotlib>=3.9",
    "numpy>=2.1",
    "pillow>=11.0",
    "pydantic>=2.9",
    "rasterio>=1.4",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
