[project]
name = "lora-planner"
version = "0.1.0"
description = "LoRa radio coverage prediction tool using SPLAT! / ITM"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "diskcache>=5.6",
    "fastapi>=0.115",
    "matplotlib>=3.9",
    "numpy>=2.1",
    "pillow>=11.0",
    "pydantic>=2.9",
    "rasterio>=1.4",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "httpx>=0.27",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests that require SPLAT! binaries or heavy I/O (deselect with '-m \"not slow\"')",
]
